# agents-os

./: .gitignore  README.md  build.gradle.kts  pom.xml  settings.gradle.kts
_docs_/: Interaction mode.drawio  (+11 more)
downloader/: PACKAGING.md  README.md  downloader.sh  pyproject.toml  url-to-md.sh
downloader/docs/: specs.md
downloader/downloader/: __init__.py  main.py  url_downloader.py
leader-toolbox/: DEPLOYMENT_GUIDE.md  MEMORY_STORAGE_DESIGN.md  OPENCLAW_COMPATIBILITY_GUIDE.md  README.md  build.gradle.kts  main.py  pyproject.toml  requirements.txt  settings.gradle.kts
leader-toolbox/.specify/: README.md  SYSTEM_OVERVIEW.md
leader-toolbox/.specify/memory/: API_DOCUMENTATION.md  ARCHITECTURE_OVERVIEW.md  IMPLEMENTATION_STATUS.md  PERFORMANCE_BENCHMARKS.md  SETUP_GUIDE.md  constitution.md  constitution_README.md  constitution_config.json
leader-toolbox/_template_/1-Team/: People - Name.md  README.md
leader-toolbox/_template_/10-Persona/: README.md
leader-toolbox/_template_/11-Product/: Product - Name.md  README.md
leader-toolbox/_template_/2-Dependencies/: README.md
leader-toolbox/_template_/20-Projects/: README.md  Workstream.md
leader-toolbox/_template_/30-SOP-Runbooks/: README.md
leader-toolbox/backend/: __init__.py  fastapi_chat.py
leader-toolbox/memory/: FEATURE_COMPARISON_OPENCLAW.md  HOW_MEMORY_WORKS.md  README.md  build.gradle.kts  settings.gradle.kts
leader-toolbox/memory-py/: MEMORY_README.md  MEMORY_SYSTEM_DESIGN.md  debug_database_state.py  debug_foreign_key.py  example_usage.py  explore_sqlite_data.ipynb  fix_foreign_key.py  memory_api.py  memory_cli.py  requirements.txt
leader-toolbox/memory-py/memory/: __init__.py  config.py  manager.py  models.py
leader-toolbox/memory-py/tests/: test_memory_system.py
leader-toolbox/memory/.specify/: PRD.md
(+222 files in other folders)
