[project]
name = "downloader"
version = "0.1.0"
description = "URL to Markdown downloader using Playwright"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdownify>=1.2.2",
    "playwright>=1.58.0",
]

[project.scripts]
downloader = "downloader.main:main"
url-to-md = "downloader.url_downloader:main"

[tool.setuptools]
packages = ["downloader"]
