[project]
name = "leader-toolbox"
version = "0.1.0"
description = "A Chat web application allowing to retrieve info from KB (Knowledge Base) and accomplish some leadership tasks."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "faiss-cpu==1.13.2",
    "fastapi>=0.128.4",
    "numpy<2",
    "pytest>=9.0.2",
    "sentence-transformers>=5.2.2",
    "uvicorn[standard]>=0.40.0",
]
